kubernetes/apps/workloads/linkding/app/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: linkding
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: linkding
      app.kubernetes.io/instance: linkding
      app.kubernetes.io/name: linkding
  enableDefaultDeny:
    ingress: true
    egress: false
  ingress:
  - fromEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: network
          gateway.networking.k8s.io/gateway-name: gateway-internal
    toPorts:
      - ports:
        - port: "9090"
          protocol: TCP
